# py-package-download-forecast

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conf.py  config.toml  pyproject.toml  requirements.txt  utils.py
.github/workflows/: sync_hf_spaces.yml  upload_artifact.yml
app/: app.py
data/: fastapi.csv  flask.csv  pytorch.csv  requests.csv  tensorflow.csv
notebook/: notebook.ipynb
workflow/: train.py  update_models.py
